# llamacpp-perfkit

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  go.mod  go.sum  pyproject.toml
cmd/llama-cpp-perfkit/: main.go
config/: benchmark.example.yaml  gemma-3-1b-smoke.yaml  qwen3.6-35b-a3b-ud-q4_k_m.yaml  qwen3.6-35b-a3b-ud-q4_k_m_code.yaml  qwopus3.5-9b-coder-mtp-gguf-q5_k_m.yaml  qwopus3.5-9b-coder-mtp-gguf-q8.yaml
internal/bench/: plan.go  plan_test.go
internal/cli/: dev.go  root.go  root_test.go  tokenize.go
internal/config/: config.go
internal/domain/: clock.go  types.go
internal/llamacpp/: client.go  client_test.go  command.go  features.go  parser.go  parser_test.go
internal/metrics/: io.go  metrics_test.go  system.go
internal/report/: report.go  report_test.go
internal/runner/: lifecycle.go  lifecycle_test.go  request.go  runner.go  tui_adapter.go  tui_adapter_test.go
internal/stats/: stats.go  stats_test.go
internal/storage/: storage.go  storage_test.go
internal/summary/: summary.go
internal/tokenize/: tokenize.go
internal/tui/: model.go  model_test.go  state.go
prompts/profiles/: code_cpp.txt  code_python.txt  creative_short.txt  explain_concept.txt  long_code_review.txt  long_prefill_16k.txt  long_prefill_32k.txt  long_prefill_48k.txt  long_prefill_60k.txt  long_prefill_8k.txt  (+4 more)
tests/: test_benchmark_dry_run.py  test_output.py  test_reporting_aggregation.py  test_reporting_cli.py  test_reporting_summary.py  test_run_storage.py  test_stats.py  test_tui_colors.py  test_tui_formatters.py  test_tui_renderer.py  test_tui_state.py
(+47 files in other folders)
