[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-perfkit"
version = "0.1.0"
description = "Terminal-first llama.cpp MoE GGUF benchmark toolkit."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "textual>=6.6",
  "typer>=0.12",
]

[project.scripts]
llamacpp-perfkit = "llamacpp_perfkit.cli:main"
lcpk = "llamacpp_perfkit.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "mypy>=1.15",
    "ruff>=0.11",
    "pytest>=8.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["build/", "dist/", ".venv/", "logs/", "runs/"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
